--- a/backend/src/.env
+++ b/backend/src/.env
@@ -4,5 +4,5 @@ PORT=3000
 CLOUDINARY_API_KEY= 455372397854254
 CLOUDINARY_API_SECRET=0MYIkveEVCaVSLznrkulgiR9F_w
 CLOUDINARY_CLOUD_NAME= ddlcqkjnr
-FRONTEND_URL=http://localhost:5173
-
+FRONTEND_URL=https://threadly-frontend-2e9s.onrender.com
+NODE_ENV=production
